FIX width of images per box to ensure cards are small enough to fit within the container and no overflow ONGOING: Will implement script to ensure once scores go over 21 no more cards will allow to be dealt

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body {
     width: 100%;
 }
 
-.game-container {
+#game-container {
     width: 95%;
     margin: 2% auto;
     text-align: center;
@@ -30,12 +30,12 @@ body {
     border: 1px solid black;
     padding: 10px;
     flex: 1;
-    height: 350px;
+    height: 300px;
     text-align: center;
 }
 
 .game-section img {
-    width: 25%;
+    width: 20%;
     padding: 10px;
 }
 
@@ -52,4 +52,57 @@ body {
 .table-section {
     padding: 0;
     margin: 0 auto;
+}
+
+/* ------ title container ----- */
+
+#title-container {
+    padding: 8% 0;
+}
+
+#header-text {
+    text-align: center;
+    padding: 3% 0;
+    font-family: "Oswald", sans-serif;
+    font-size: 50px;
+}
+
+#title-btns-container {
+    text-align: center;
+}
+
+#btnStart,
+#btnInstruct {
+    padding: 3% 4%;
+}
+
+/* ----------------- The Modal (background) */
+
+.modal {
+  display: none; /* Hidden by default */
+  z-index: 1; /* Sits on top */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+
+}
+
+/* Modal Content/Box */
+.modal-content {
+  margin: 8% auto;
+  padding: 2% 32%; 
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
